[package]
name = "dontslack"
version = "0.1.0"
authors = ["Sudarsan <sudar.theone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slack_api = "0.22.0"
chrono = { version = "0.4", features = ["serde"] }
